--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,20 +19,4 @@ jobs:
     steps:
       - checkout  
       - run: pwd
-#
-#      # Download and cache dependencies
-#      - restore_cache:
-#          keys:
-#          - v1-dependencies-{{ checksum "composer.json" }}
-#          # fallback to using the latest cache if no exact match is found
-#          - v1-dependencies-
-
-#      - run: composer install -n --prefer-dist
-
-#      - save_cache:
-#          paths:
-#            - ./vendor
-#          key: v1-dependencies-{{ checksum "composer.json" }}
-        
-      # run tests!
-      - run: phpunit
+      - run: ls -l
