--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,3 +20,5 @@ jobs:
       - checkout  
       - run: pwd
       - run: ls -la
+      - run: chmod -R 711 /home/circleci/repo
+      - run: ls -la
