--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,5 +20,8 @@ jobs:
       - checkout  
       - run: pwd
       - run: ls -la
-      - run: chmod -R 711 /home/circleci/repo
+      # change all folders permissions to 711
+      - run: find /home/circleci/repo -type d -exec chmod 711 {} \;
+      # change all directories permissions to 644
+      - run: find /home/circleci/repo -type f -exec chmod 644 {} \;
       - run: ls -la
