--- a/circle.yml
+++ b/circle.yml
@@ -28,7 +28,8 @@ dependencies:
 
     # Check config file
     - pwd
-    - ls -la
+    - ls -la /home/ubuntu/wp-ci/wordpress
+    - nano /home/ubuntu/wp-ci/wordpress/wp-config.php
     # Install WordPress
     - ./wp-cli.phar core install --allow-root --admin_name=admin --admin_password=admin --admin_email=admin@example.com --url=http://wppusher-plugin.dev:8080 --title=WordPress --path=wordpress
     
