--- a/circle.yml
+++ b/circle.yml
@@ -30,7 +30,7 @@ dependencies:
     - pwd
     - ls -la /home/ubuntu/wp-ci/wordpress
     - cat /home/ubuntu/wp-ci/wordpress/wp-config.php
-    - mysql -u root -p -e 'show databases;'
+    - mysql -u root -p admin -e 'show databases;'
     # Install WordPress
     - ./wp-cli.phar core install --allow-root --admin_name=admin --admin_password=admin --admin_email=admin@example.com --url=http://wppusher-plugin.dev:8080 --title=WordPress --path=wordpress
     
