--- a/circle.yml
+++ b/circle.yml
@@ -30,10 +30,9 @@ dependencies:
     - pwd
     - ls -la /home/ubuntu/wp-ci/wordpress
     - cat /home/ubuntu/wp-ci/wordpress/wp-config.php
-    - find /home/ubuntu/wp-ci/wordpress/ -type d -exec chmod 711 {} \;
-    - find /home/ubuntu/wp-ci/wordpress/ -type f -exec chmod 644 {} \;
+
     # Install WordPress
-    - ./wp-cli.phar core install --allow-root --admin_name=admin --admin_password=admin --admin_email=admin@example.com --url=http://wppusher-plugin.dev:8080 --title=WordPress --path=wordpress
+    - sudo ./wp-cli.phar core install --allow-root --admin_name=admin --admin_password=admin --admin_email=admin@example.com --url=http://wppusher-plugin.dev:8080 --title=WordPress --path=wordpress
     
     # Clonse WP Pusher plugin from GitHub
     - git clone git@github.com:petersuhm/wppusher-plugin.git wordpress/wp-content/plugins/wppusher
