rm wppusher and change env

--- a/circle.yml
+++ b/circle.yml
@@ -3,7 +3,9 @@ machine:
     Europe/Copenhagen
 
   php:
-    version: 7.0.4
+    version: 5.6.22
+    environment:
+    PATH: $HOME/.composer/vendor/bin:$PATH
 
   # This will be added to the `/etc/hosts` file
   hosts:
@@ -35,14 +37,14 @@ dependencies:
     - sudo ./wp-cli.phar core install --allow-root --admin_name=admin --admin_password=admin --admin_email=admin@example.com --url=http://wppusher-plugin.dev:8080 --title=WordPress --path=wordpress
     
     # Clonse WP Pusher plugin from GitHub
-    - git clone git@github.com:petersuhm/wppusher-plugin.git wordpress/wp-content/plugins/wppusher
+    #- git clone git@github.com:petersuhm/wppusher-plugin.git wordpress/wp-content/plugins/wppusher
     
     # And use WP-CLI to activate it
-    - ./wp-cli.phar plugin activate wppusher --path=wordpress
+    #- ./wp-cli.phar plugin activate wppusher --path=wordpress
 
   post:
     # Copy Apache conf into `site-available`
-    - cp ~/wppusher-plugin/apache-ci.conf /etc/apache2/sites-available
+    #- cp ~/wppusher-plugin/apache-ci.conf /etc/apache2/sites-available
     
     # Use `a2ensite` to create a symlink for the config
     - a2ensite apache-ci.conf
