rm wppusher apache conf

--- a/circle.yml
+++ b/circle.yml
@@ -47,7 +47,7 @@ dependencies:
     #- cp ~/wppusher-plugin/apache-ci.conf /etc/apache2/sites-available
     
     # Use `a2ensite` to create a symlink for the config
-    - a2ensite apache-ci.conf
+    #- a2ensite apache-ci.conf
     
     # Restart the Apache server
     - sudo service apache2 restart
