--- a/circle.yml
+++ b/circle.yml
@@ -3,9 +3,7 @@ machine:
     Europe/Copenhagen
 
   php:
-    version: 5.6.22
-    environment:
-    PATH: $HOME/.composer/vendor/bin:$PATH
+    version: 5.3.10-1ubuntu3.18
 
   # This will be added to the `/etc/hosts` file
   hosts:
@@ -14,7 +12,7 @@ machine:
 dependencies:
   pre:
     # No password is required for the MySQL user `ubuntu`
-    - sudo mysql -u ubuntu -e "create database wordpress"
+    - mysql -u ubuntu -e "create database wordpress"
     
     # Use cURL to fetch WP-CLI
     - curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
@@ -30,7 +28,7 @@ dependencies:
 
     # Check config file
     - pwd
-    - ls -la /home/ubuntu/wp-ci/wordpress
+    - ls -la /home/ubuntu/
     - cat /home/ubuntu/wp-ci/wordpress/wp-config.php
 
     # Install WordPress
