--- a/circle.yml
+++ b/circle.yml
@@ -3,7 +3,7 @@ machine:
     Europe/Copenhagen
 
   php:
-    version: 5.3.10-1ubuntu3.18
+    version: 7.0.4
 
   # This will be added to the `/etc/hosts` file
   hosts:
